# strahl

./: .gitignore  CMakeLists.txt  README.md
inc/: camera.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  utils.h  vec.h
src/: hittable_list.cpp  main.cpp  ray.cpp  sphere.cpp  utils.cpp  vec.cpp
